<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    tools:context="com.wendyliga.s7soundfix.fragments.main">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#303030"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="65dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_1"
                    android:textColor="#FFF" />

                <FrameLayout
                    android:id="@+id/youtube_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:visibility="visible">

                </FrameLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thanks_video"
                    android:textAlignment="center"
                    android:textColor="#FFF" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/home_2"
                    android:textColor="#FFF" />


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:elevation="1dp"
                    android:text="@string/home_3"
                    android:textColor="#FFF" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/home_4"
                    android:textColor="#FFF" />

                <com.dd.CircularProgressButton
                    android:id="@+id/btn_fix"
                    android:layout_width="196dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/cpb_white"
                    android:textSize="18sp"
                    app:cpb_textComplete="@string/complate"
                    app:cpb_textError="@string/failed"
                    app:cpb_textIdle="@string/fix" />


                <ProgressBar
                    android:id="@+id/pb"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:visibility="gone" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer"></com.google.android.gms.ads.AdView>

</RelativeLayout>
